src/objects/Lockbox_Envelope__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Customer Envelop Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lockbox_Amount__c</fullName>
        <label>Lockbox Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lockbox_number__c</fullName>
        <label>Lockbox number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lockbox Envelope</label>
    <listViews>
        <fullName>All_Lockbox_Envelopes</fullName>
        <columns>NAME</columns>
        <columns>Lockbox_number__c</columns>
        <columns>Amount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Lockbox Envelopes</label>
    </listViews>
    <nameField>
        <displayFormat>LBE-{0000}</displayFormat>
        <label>Lockbox Envelope Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lockbox Envelopes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>